--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,11 @@
 [package]
 name = "mediumvec"
-version = "1.0.1"
+version = "1.0.2"
 authors = ["Matt Brubeck <mbrubeck@limpet.net>"]
 license = "MIT / Apache-2.0"
 description = "Vector types optimized for space, including a 32-bit Vec"
 repository = "https://github.com/mbrubeck/mediumvec"
 documentation = "https://docs.rs/mediumvec"
 keywords = ["vec", "small", "collection", "smallvec", "size"]
+categories = ["data-structures"]
+readme = "README.md"
