--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "mediumvec"
 version = "1.2.0"
 authors = ["Matt Brubeck <mbrubeck@limpet.net>"]
-license = "MIT / Apache-2.0"
+license = "MIT OR Apache-2.0"
 description = "Vector types optimized for space, including a 32-bit Vec"
 repository = "https://github.com/mbrubeck/mediumvec"
 documentation = "https://docs.rs/mediumvec"
