--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ documentation = "https://docs.rs/mediumvec"
 keywords = ["vec", "small", "collection", "smallvec", "size"]
 categories = ["data-structures"]
 readme = "README.md"
+edition = "2021"
